--- a/test/fixtures/ques1s.yml
+++ b/test/fixtures/ques1s.yml
@@ -1,7 +1,7 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  question: 
+  question: false
 
 two:
-  question: 
+  question: false
