--- a/.github/workflows/github_actions.yml
+++ b/.github/workflows/github_actions.yml
@@ -5,7 +5,7 @@ on:
   #feature/をpushするとこのワークフローを実行するようにする
   push:
     branches:
-      - feature/*
+      - add/*
   pull_request:
     branches:
       - '*'
