--- a/.github/workflows/github_actions.yml
+++ b/.github/workflows/github_actions.yml
@@ -40,10 +40,10 @@ jobs:
 
       - name: rubocop checks
         run: |
-          docker-compose run --rm app bundle exec rubocop
+          docker-compose -f docker-compose-test.yml run --rm app bundle exec rubocop
 
       - name: run rspec
         run: |
-          docker-compose run --rm app bundle exec rspec
+          docker-compose -f docker-compose-test.yml run --rm app bundle exec rspec
         env:
           RAILS_ENV: test
