--- a/docker-compose-test.yml
+++ b/docker-compose-test.yml
@@ -6,7 +6,7 @@ services:
       MYSQL_ROOT_HOST: '%'
       # MYSQL_ALLOW_EMPTY_PASSWORD: 'yes'
       MYSQL_ROOT_PASSWORD: password
-      MYSQL_DATABASE: app_test
+      MYSQL_DATABASE: myapp_test
       TZ: Asia/Tokyo
     ports:
       - "3306:3306"
